| Summary: | ASTERISK-24385: chan_sip: process_sdp leaks on an error path | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2014-10-01 21:43:21 | Date Closed: | 2014-10-04 19:24:34 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_sip/General |
| Versions: | 11.13.0 12.6.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | process_sdp leaks on an error path where crypto lines are expected but not provided. | ||
| Comments: | |||